<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.SingUpFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCrear"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/m24dp"
        android:layout_marginTop="@dimen/m24dp"
        android:layout_marginEnd="@dimen/m24dp"
        android:fontFamily="sans-serif"
        android:text="@string/crear"
        android:textColor="@color/grisclaro"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/cboxRecordarSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ts20dp"
            android:hint="@string/correo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/mimg20dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tiC">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:textSize="@dimen/ts20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/mimg20dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tiU">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textSize="@dimen/ts20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintGuide_begin="@dimen/mimg20dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvTitleSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/agencyr"
        android:text="@string/crear_cuenta"
        android:textSize="@dimen/ts40dp"
        app:layout_constraintBottom_toTopOf="@+id/tiC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/mimg20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiConfirP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/mimg20dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tiP">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:textSize="@dimen/ts20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cboxRecordarSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/recordar_contrase_a"

        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tiConfirP" />

</androidx.constraintlayout.widget.ConstraintLayout>